--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 ### EquityHedging ###
+###Ignore###
 EquityHedging/reports/*.xlsx
 #EquityHedging/scripts/add_data_temp.py
 EquityHedging/data/new_strats/*.xlsx
 #EquityHedging/data/update_strats/*.xlsx
 desktop.ini
+
+# DO-NOT ignore specific files
+EquityHedging/data/new_strats/vrr_data.xlsx
 
 ### JupyterNotebooks ###
 .ipynb_checkpoints
