--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 EquityHedging/reports/*.xlsx
 #EquityHedging/scripts/add_data_temp.py
 EquityHedging/data/new_strats/*.xlsx
+EquityHedging/data/liq_alts/*.xlsx
+
 #EquityHedging/data/update_strats/*.xlsx
 desktop.ini
 
