--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ EquityHedging/reports/*.xlsx
 #EquityHedging/scripts/add_data_temp.py
 EquityHedging/data/new_strats/*.xlsx
 EquityHedging/data/liq_alts/*.xlsx
+EquityHedging/data/liq_alts/*.xls
 
 #EquityHedging/data/update_strats/*.xlsx
 desktop.ini
