--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,9 @@ EquityHedging/data/liq_alts/*.xlsx
 EquityHedging/data/liq_alts/*.xls
 #EquityHedging/data/update_strats/*.xlsx
 desktop.ini
-idea/.gitignore
+.idea/.gitignore
 
+.idea/*
 # DO-NOT ignore specific files
 EquityHedging/data/new_strats/vrr_data.xlsx
 
