--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,26 @@ Cluster Analysis/data/Normalized_Hedge_Metrics.xlsx
 .idea/misc.xml
 .idea/inspectionProfiles/profiles_settings.xml
 .idea/workspace.xml
+EquityHedging/data/liq_alts/adapt.xlsx
+EquityHedging/data/liq_alts/aifa.xlsx
+EquityHedging/data/liq_alts/aleyska.xlsx
+EquityHedging/data/liq_alts/aqr_gm.xlsx
+EquityHedging/data/liq_alts/aqr_tf.xlsx
+EquityHedging/data/liq_alts/aspect.xlsx
+EquityHedging/data/liq_alts/astignes.xlsx
+EquityHedging/data/liq_alts/br_explorer.xlsx
+EquityHedging/data/liq_alts/br_master.xlsx
+EquityHedging/data/liq_alts/campbell_ar.xlsx
+EquityHedging/data/liq_alts/campbell_ar_strats.xlsx
+EquityHedging/data/liq_alts/castle_hook.xlsx
+EquityHedging/data/liq_alts/centiva.xlsx
+EquityHedging/data/liq_alts/cfm.xlsx
+EquityHedging/data/liq_alts/custom_bmk.xlsx
+EquityHedging/data/liq_alts/custom_itd_data.xlsx
+EquityHedging/data/liq_alts/data_dump_052022.xls
+EquityHedging/data/liq_alts/data_dump_062022.xls
+EquityHedging/data/liq_alts/demo_port.xlsx
+EquityHedging/data/liq_alts/dymon_asia.xlsx
+EquityHedging/data/liq_alts/east_one.xlsx
+EquityHedging/data/liq_alts/east_value.xlsx
+EquityHedging/data/liq_alts/edl.xlsx
