--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,6 @@ GPUCache/data_3
 GPUCache/index
 GPUCache/data_2
 GPUCache/data_1
+.idea/workspace.xml
+.idea/shelf/Uncommitted_changes_before_Checkout_at_1_24_2024_4_20_PM__Changes_.xml
+.idea/shelf/Uncommitted_changes_before_Checkout_at_1_24_2024_4_07_PM__Changes_.xml
